# IVoice_client

./: Cargo.toml  readme.md
src/: main.rs
src/styles/: styles.css
src/utils/: audio.rs  auth.rs  mod.rs  socket.rs
src/widgets/: icons.rs  login_window.rs  main_window.rs  mod.rs  register_window.rs  server_bar.rs  side_bar.rs  utils.rs  workspace.rs
