[package]
name = "IVoice_client"
version = "0.1.0"
edition = "2021"

[dependencies]
atk-sys = "0.18.0"
gdk-sys = "0.18.0"
gtk = "0.18.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures-util = "0.3.31"
rust_socketio = { version = "*" }
cpal = "0.15.3"
